@@ -4,6 +4,10 @@ Change History
 1.8.4 (unreleased)
 ------------------
 
+- Fixed UnicodeDecodeError when vocabulary value is a non-ascii string.
+  This could happen in selection and multi selection fields.
+  [maurits]
+
 - change captcha verification message for #186
   [tkimnguyen]
 
